# ellm

./: README.md  main.py  pyproject.toml
src/ellm/: main.py  model.py
tests/: test_main.py  test_model.py
